Blog: fix line spacing for footnote markers

--- a/css/default.css
+++ b/css/default.css
@@ -16,6 +16,10 @@ nav {
   text-align: right;
 }
 
+sup {
+  line-height: 1;
+}
+
 a {
   text-decoration: none;
   color: #4183c4;
